Upgrade to Gradle 7.5 (#1980)
The ES project recently upgraded Gradle and now some build code from ES depends on new methods.

Additionally, the Spark version in QA has disappeared and a new version of Spark needs to be added for testing.

(cherry picked from commit 712679f88772fb15184ad7c87dea220a87803f44)