@@ -172,6 +172,7 @@ if (JavaVersion.current() >= JavaVersion.VERSION_16) {
         task.configure {
             jvmArgs "--add-opens=java.base/java.io=ALL-UNNAMED" // Needed for IOUtils's BYTE_ARRAY_BUFFER reflection
             jvmArgs "--add-opens=java.base/java.nio=ALL-UNNAMED" // Needed for org.apache.spark.SparkConf, which indirectly uses java.nio.DirectByteBuffer
+            jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED" // Needed for secure mock
         }}
 }
 
